deploy/network-policy/dify/allow-api.yaml
########################
### Ingress
########################

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-from-other-workloads
  namespace: dev-dify
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-dify-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/role: dify-app
    ports:
    - protocol: TCP
      port: 5001

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-from-ingress
  namespace: dev-dify
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-dify-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 5001

---

########################
### Egress
########################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-other-workloads
  namespace: dev-dify
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-dify-api
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.aio/role: dify-app
    ports:
    - protocol: TCP
      port: 8194 # sandbox
    - protocol: TCP
      port: 3128 # ssrf-proxy
    - protocol: TCP
      port: 5002 # plugin-daemon
    - protocol: TCP
      port: 5003 # plugin-daemon
    - protocol: TCP
      port: 8084 # plugin-manager
    - protocol: TCP
      port: 8082 # enterprise API

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-database
  namespace: dev-dify
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-dify-api
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-postgresql
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-redis
    ports:
    - protocol: TCP
      port: 6379
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-qdrant
    ports:
    - protocol: TCP
      port: 6333
  - to:
    - ipBlock:
        cidr: 10.10.10.0/24
    ports:
    - protocol: TCP
      port: 9000 # minio

---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-api-to-plugin-manager
#   namespace: dev-dify
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: dev-dify-api
#   policyTypes:
#   - Egress
#   egress:
#   - to:
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: dev-dify-plugin-manager
#     ports:
#     - protocol: TCP
#       port: 8084

---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-api-to-enterprise-api
#   namespace: dev-dify
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: dev-dify-api
#   policyTypes:
#   - Egress
#   egress:
#   - to:
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: dev-dify-enterprise-api
#     ports:
#     - protocol: TCP
#       port: 8082
