deploy/network-policy/dify/allow-unstructured.yaml
########################
### Ingress
########################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-unstructured-from-other-workloads
  namespace: dev-dify
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-dify-unstructured
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/role: dify-app
    ports:
    - protocol: TCP
      port: 8000

---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-unstructured-from-api
#   namespace: dev-dify
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: dev-dify-unstructured
#   policyTypes:
#   - Ingress
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: dev-dify-api
#     ports:
#     - protocol: TCP
#       port: 8000

# ---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-unstructured-from-enterprise-api
#   namespace: dev-dify
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: dev-dify-unstructured
#   policyTypes:
#   - Ingress
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: dev-dify-enterprise-api
#     ports:
#     - protocol: TCP
#       port: 8000

# ---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-unstructured-from-worker
#   namespace: dev-dify
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: dev-dify-unstructured
#   policyTypes:
#   - Ingress
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: dev-dify-worker
#     ports:
#     - protocol: TCP
#       port: 8000

---

########################
### Egress
########################
